# wust

./: Cargo.toml  LICENSE  README.md  config.example.toml  deny.toml
.github/workflows/: release.yml
src/: main.rs
